# alldice

./: .gitignore  .gitmodules  Gruntfile.js  LICENSE  README.md  alldice.cabal  bower.json  default.nix  elm-package.json  package.json  shell.nix  stack.yaml
assets/: index.html
assets/js/: custom.js
assets/sass/: _center.scss  _navbar.scss  style.scss
assets/sass/compass/: _gradient.scss  _support.scss
esrc/: Editor.elm  Index.elm  Main.elm  Navbar.elm  Static.elm
psrc/: documentation.html  index.html
psrc/Example/: Main.purs
psrc/sass/: _content.scss  _settings.scss  style.scss
src/: Main.hs  Scheme.hs  stdlib.scm
src/AllDice/: NSQ.hs  Scheme.hs  Types.hs  Web.hs
src/Dice/: Common.hs  PCGen.hs
src/Scheme/: Env.hs  Evaluator.hs  Parser.hs  Primitives.hs  Types.hs
