name:                alldice
version:             0.1.0.0
synopsis:            An restful dice roller
-- description:
-- homepage:
license:             Apache-2.0
license-file:        LICENSE
author:              Anja Berens
maintainer:          pharaun666@gmail.com
-- copyright:
category:            Web
build-type:          Simple
extra-source-files:  README.rst
cabal-version:       >=1.10

executable alldice
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:        -Wall -fno-warn-missing-signatures -O2 -rtsopts
  hs-source-dirs:      src
  extra-libraries:     pthread
  build-depends:       base >=4.5 && <4.7
                     , aeson
                     , bytestring
                     , http-types
                     , text
                     , mtl
                     , wai
                     , wai-routes
                     , wai-extra
                     , wai-app-static
                     , warp
                     , containers
                     , MonadRandom
                     , crypto-random-api
                     , mwc-random
