name:                alldice
version:             0.1.0.0
synopsis:            A RESTful/NSQ scheme dice roller.
description:         A minimal scheme interpreter for programming dice rolls, the api is accessable over a RESTful json interface along with NSQ message bus endpoint.
 homepage:           https://github.com/gamelost/alldice
license:             Apache-2.0
license-file:        LICENSE
author:              Anja Berens
maintainer:          pharaun666@gmail.com
-- copyright:
category:            Web
build-type:          Simple
extra-source-files:  README.rst
cabal-version:       >=1.10

executable alldice
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:        -Wall -fno-warn-missing-signatures -O2 -rtsopts -with-rtsopts=-T -threaded -eventlog
  hs-source-dirs:      src
  extra-libraries:     pthread
  build-depends:       base >=4.5 && <4.7
--                     , aeson
                     , async
--                     , bytestring
                     , containers
                     , ekg
                     , hslogger
                     , hsnsq >= 0.1.0.0
                     , mtl
                     , parsec
                     , random
                     , scotty
                     , stm
                     , text
                     , wai-extra
                     , warp
