name:           alldice
version:        0.1.0.0
synopsis:       A minimal scheme interpreter for programming dice rolls, api is accessable over a RESTful json interface.
license:        Apache-2.0
license-file:   LICENSE
author:         Anja Berens
maintainer:     pharaun666@gmail.com
category:       Web
build-type:     Simple
cabal-version:  >=1.10

extra-source-files:
    README.rst

executable alldice
    main-is:            Main.hs
    default-language:   Haskell2010
    hs-source-dirs:     src
    extra-libraries:    pthread
    ghc-options:       -Wall -fno-warn-missing-signatures -O2 -rtsopts -threaded

    build-depends:      base >=4.5 && <4.8
                      -- TODO: Working around aeson not handling something here
                      , scientific  < 0.3.3.1
                      , aeson       > 0.8
                      , async       > 2.0
                      , bytestring  > 0.10
                      , containers  > 0.5.5
                      , hslogger    > 1.2
                      , mtl         > 2.2
                      , parsec      > 3.1
                      , random      > 1.0
                      , scotty      > 0.10
                      , stm         > 2.4
                      , text        > 1.2
                      , wai-extra   > 3.0
                      , warp        > 3.0
                      , safe        > 0.3
